--- a/src/main/resources/static/css/base.css
+++ b/src/main/resources/static/css/base.css
@@ -28,11 +28,6 @@ main {
     vertical-align: middle;
 }
 
-img.view {
-    height: 15em;
-    image-rendering: pixelated;
-}
-
 form {
     margin: 0 auto;
     text-align: center;
@@ -67,21 +62,22 @@ html.reservation-view h2{
     font-size: 1.5rem;
 }
 html.reservation-view main img{
-    margin: -2em;
-    z-index: -1;
+    width: 15em;
+    margin: -1em;
     border: none;
+    image-rendering: pixelated;
 }
 
-html.reservation-view .instrucciones{
+html.reservation-view .info {
     margin: 3rem 0;
     /*margin-top: 3em;*/
 }
 
-html.reservation-view .instrucciones h2{
+html.reservation-view .info h2{
     font-size: 1.25rem;
 }
 
-html.reservation-view .instrucciones p:not(:last-child){
+html.reservation-view .info p:not(:last-child){
     margin-bottom: 0rem;
 }
 
