--- a/src/main/resources/templates/area/list.html
+++ b/src/main/resources/templates/area/list.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html
         data-layout-decorate="~{fragments/base}">
-<span data-layout-fragment="title" data-th-text="'Áreas de ' + ${data[0].municipality.name}"></span>
+<span data-layout-fragment="title" data-th-text="'Áreas de ' + ${session.data.municipality.name}"></span>
 <main data-layout-fragment="content">
     <p data-th-if="${session.user == null or session.user instanceof T(app.model.Citizen)}" class="text-muted">
         Si desea realizar una reserva, clique en "Horarios" para ver las franjas disponibles.<br>
@@ -25,7 +25,7 @@
                     data-th-unless="${session.user == null or session.user instanceof T(app.model.Citizen)}">Información</span>
             </th>
             <th class="text-center"
-                data-th-if="${session.user instanceof T(app.model.MunicipalManager) and session.user.municipality == data[0].municipality.id and data[0].municipality.active}">
+                data-th-if="${session.user instanceof T(app.model.MunicipalManager) and session.user.municipality == session.data.municipality.id and session.data.municipality.active}">
                 <a
                         data-th-href="@{/area/add}" class="btn btn-success"
                         role="button">Añadir</a>
@@ -35,12 +35,12 @@
         <tbody>
         <tr data-th-if="${#lists.isEmpty(object)}">
             <td class="text-center" colspan="8"
-                data-th-if="${session.user instanceof T(app.model.MunicipalManager) and session.user.municipality == data[0].municipality.id and data[0].municipality.active}">
+                data-th-if="${session.user instanceof T(app.model.MunicipalManager) and session.user.municipality == session.data.municipality.id and session.data.municipality.active}">
                 No hay ninguna área
                 registrada
             </td>
             <td class="text-center" colspan="7"
-                data-th-if="${session.user instanceof T(app.model.MunicipalManager) and session.user.municipality == data[0].municipality.id and not data[0].municipality.active}">
+                data-th-if="${session.user instanceof T(app.model.MunicipalManager) and session.user.municipality == session.data.municipality.id and not session.data.municipality.active}">
                 No hay ninguna área
                 registrada
             </td>
@@ -71,7 +71,7 @@
                    data-th-href="@{/zone/list/{id}(id=${object.id})}" class="btn btn-info" role="button">Zonas</a>
             </td>
             <td class="text-center"
-                data-th-if="${session.user instanceof T(app.model.MunicipalManager) and session.user.municipality == data[objectStat.index].municipality.id and data[0].municipality.active}">
+                data-th-if="${session.user instanceof T(app.model.MunicipalManager) and session.user.municipality == data[objectStat.index].municipality.id and session.data.municipality.active}">
                 <a data-th-if="*{object.active}"
                    data-th-href="@{/area/update/{id}(id=${object.id})}" class="btn btn-warning" role="button">Actualizar
                 </a>
