--- a/src/main/resources/templates/fragments/base.html
+++ b/src/main/resources/templates/fragments/base.html
@@ -14,6 +14,6 @@
     <nav data-th-replace="fragments/nav"></nav>
 </header>
 <main data-layout-fragment="content"></main>
-<footer class="navbar bg-light text-muted">EI1027 - Diseño y Implementación de Sistemas de la Información</footer>
+<footer data-th-replace="fragments/footer"></footer>
 </body>
 </html>
