--- a/src/main/resources/templates/service/list.html
+++ b/src/main/resources/templates/service/list.html
@@ -2,7 +2,7 @@
 <html
         data-layout-decorate="~{fragments/base}">
 <span data-layout-fragment="title"
-      data-th-text="'Servicios de ' + ${data[0].area.name} + ' (' + ${data[0].municipality.name} + ')'"></span>
+      data-th-text="'Servicios de ' + ${session.data.area.name} + ' (' + ${session.data.municipality.name} + ')'"></span>
 <main data-layout-fragment="content">
     <table class="table table-striped">
         <thead>
@@ -11,12 +11,12 @@
             <th>Fechas</th>
             <th>Horario</th>
             <th data-th-if="${session.user == null or session.user instanceof T(app.model.Citizen)}"><a
-                    data-th-href=" @{/area/list/{id}(id=${data[0].municipality.id})}" class="btn btn-info"
+                    data-th-href=" @{/area/list/{id}(id=${session.data.municipality.id})}" class="btn btn-info"
                     role="button">Atras</a></th>
             <th class="text-center"
-                data-th-if="${session.user instanceof T(app.model.MunicipalManager) and data[0].municipality.active and data[0].area.active}">
+                data-th-if="${session.user instanceof T(app.model.MunicipalManager) and session.data.municipality.active and session.data.area.active}">
                 <a
-                        data-th-href="@{/service/add/{id}(id=${data[0].area.id})}" class="btn btn-success"
+                        data-th-href="@{/service/add/{id}(id=${session.data.area.id})}" class="btn btn-success"
                         role="button">Añadir</a>
             </th>
         </tr>
@@ -24,11 +24,11 @@
         <tbody>
         <tr data-th-if="${#lists.isEmpty(object)}">
             <td class="text-center" colspan="4"
-                data-th-if="${(session.user == null or session.user instanceof T(app.model.Citizen)) or (session.user instanceof T(app.model.MunicipalManager) and data[0].municipality.active and data[0].area.active)}">
+                data-th-if="${(session.user == null or session.user instanceof T(app.model.Citizen)) or (session.user instanceof T(app.model.MunicipalManager) and session.data.municipality.active and session.data.area.active)}">
                 No hay ningún servicio registrado
             </td>
             <td class="text-center" colspan="3"
-                data-th-unless="${(session.user == null or session.user instanceof T(app.model.Citizen)) or (session.user instanceof T(app.model.MunicipalManager) and data[0].municipality.active and data[0].area.active)}">
+                data-th-unless="${(session.user == null or session.user instanceof T(app.model.Citizen)) or (session.user instanceof T(app.model.MunicipalManager) and session.data.municipality.active and session.data.area.active)}">
                 No hay ningún servicio registrado
             </td>
         </tr>
