--- a/src/main/resources/templates/service/update.html
+++ b/src/main/resources/templates/service/update.html
@@ -22,7 +22,7 @@
             </tr>
             <tr>
                 <th><label for="scheduleStart">Fecha de inicio</label></th>
-                <td><input required="required" type="date" id="scheduleStart" data-th-field="*{scheduleStart}"
+                <td><input required="required" type="date"  id="scheduleStart" data-th-field="*{scheduleStart}"
                            data-th-attr="min=${data.today}"
                            data-th-disabled="${object.scheduleStart.isBefore(data.today)}"></td>
             </tr>
@@ -42,7 +42,7 @@
                 </td>
             </tr>
             <tr>
-                <th><label for="periodStart">Hora de inicio</label></th>
+                <th><label for="periodStart">Hora de inicio<br>(no admite segundos)</label></th>
                 <td><input required="required" type="time" id="periodStart" data-th-field="*{periodStart}"></td>
             </tr>
             <tr data-th-each="err : ${#fields.errors('periodStart')}">
@@ -51,7 +51,7 @@
                 </td>
             </tr>
             <tr>
-                <th><label for="periodEnd">Hora de fin</label></th>
+                <th><label for="periodEnd">Hora de fin<br>(no admite segundos)</label></th>
                 <td><input required="required" type="time" id="periodEnd" data-th-field="*{periodEnd}"></td>
             </tr>
             <tr data-th-each="err : ${#fields.errors('periodEnd')}">
