--- a/src/main/resources/templates/areaPeriod/list.html
+++ b/src/main/resources/templates/areaPeriod/list.html
@@ -56,9 +56,9 @@
             </td>
             <td class="text-center"
                 data-th-if="${session.user instanceof T(app.model.MunicipalManager) and session.user.municipality == data[objectStat.index].municipality.id and data[objectStat.index].municipality.active and data[objectStat.index].area.active}">
-                <a data-th-if="*{object.ended}"
+                <a data-th-unless="*{object.ended}"
                    data-th-href="@{/area-period/update/{id}(id=${object.id})}" class="btn btn-warning" role="button">Actualizar</a>
-                <a data-th-if="*{object.ended}"
+                <a data-th-unless="*{object.ended}"
                    data-th-href="@{/area-period/delete/{id}(id=${object.id})}"
                    onclick="return confirm('¿Seguro que desea eliminar el horario?')" class="btn btn-danger"
                    role="button">Eliminar
