--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -1,7 +1,7 @@
 <footer class="navbar navbar-expand-lg navbar-light bg-light">
   <ul class="navbar-nav mr-auto">
-    <li class="nav-item"><a class="nav-link" href="#">EI1027</a></li>
-    <li class="nav-item"><a class="nav-link" href="#">Generalidad Valenciana - Consejo de administración de los sitios protegidos</a></li>
+    <li class="nav-item"><a class="nav-link" target="_blank" href="https://ujiapps.uji.es/sia/rest/publicacion/2020/estudio/225/asignatura/EI1027">EI1027</a></li>
+    <li class="nav-item"><a class="nav-link" target="_blank"  href="https://www.gva.es/va/inicio/presentacion">Generalidad Valenciana - Consejo de administración de los sitios protegidos</a></li>
   </ul>
   <ul class="navbar-nav">
     <li class="nav-item"><a class="nav-link" data-th-href="${session.data.mailtoerror}" target="_blank">Notificar un error</a></li>
