--- a/src/main/resources/templates/municipalManager/add.html
+++ b/src/main/resources/templates/municipalManager/add.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html
         data-layout-decorate="~{fragments/base}">
-<span data-layout-fragment="title" data-th-text="'Añadir gestor a ' + ${data.municipality.name}"></span>
+<span data-layout-fragment="title" data-th-text="'Añadir gestor a ' + ${session.data.municipality.name}"></span>
 <main data-layout-fragment="content">
     <form
             onsubmit="return confirm('¿Seguro que desea dar de alta al gestor municipal y los datos son correctos?')"
