--- a/src/main/resources/templates/municipalManager/update.html
+++ b/src/main/resources/templates/municipalManager/update.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html
         data-layout-decorate="~{fragments/base}">
-<span data-layout-fragment="title" data-th-text="'Actualizar gestor de ' + ${data.municipality.name}"></span>
+<span data-layout-fragment="title" data-th-text="'Actualizar gestor de ' + ${session.data.municipality.name}"></span>
 <main data-layout-fragment="content">
     <form onsubmit="return confirm('¿Seguro que desea actualizar los datos y los datos son correctos?')"
           data-th-object="${object}" method="post">
